--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "splayer",
   "version": "1.1.8",
-  "author": "imsyy",
-  "home": "https://imsyy.top",
-  "github": "https://github.com/imsyy/SPlayer",
+  "author": "Heiying",
+  "home": "https://hyteam.top",
+  "github": "https://github.com/",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
